# hanazono

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  ServerDockerfile  SiteDockerfile  db.py  docker-compose.yml  mkdocs.yml  pyproject.toml  render.Dockerfile
.github/workflows/: deploy.yml  deploy_template.yml  test.yml
docs/: index.md
docs/artificial_intelligence/: alpaca.md  cellular_automata.md  chatgpt.md  forward_forward.md  free_energy_principle.md  gflow.md  hopfield.md  jepa.md  lenia.md  life.md  llama.md  mistral.md  predictive_coding.md  prompt_engineering.md  self_organization.md  texture.md  transformers.md  vision.md  world_model.md
docs/artificial_intelligence/models/: ai_agents.md  chatgpt.md  transformers.md
docs/artificial_intelligence/research/: cellular_automata.md  forward_forward.md  free_energy_principle.md  gflow.md  hopfield.md  jepa.md  lenia.md  predictive_coding.md  self_organization.md  texture.md
docs/artificial_intelligence/tools/: autogen.md  langchain.md  litellm.md  vercel_ai_sdk.md
docs/books/: models_of_mind.md  on_intelligence.md  pouvoir_de_la_rhetorique.md  to_read.md
docs/brain/: cognitive_maps.md  criticality.md  edge_centric.md  ephatic.md  memory.md  models.md  neuroanatomy.md  neurophisiology.md  neurotransmitters.md  organization.md  path_integration.md  sound.md  thalamus.md  vision.md
docs/code/: django.md  docker.md  git.md  help.md  hugging_face.md  linux.md  makefile.md  mkdocs.md  ollama.md  postgres.md  raspberry.md  regex.md  setup.md  ssh.md  streamlit.md  tensor_computation_librairies.md  web.md
docs/code/python/: index.md  python_import_rules.md  tensor_computation_librairies.md
docs/general_knowledge/: cognitif_bias.md  effetdeserre.md
docs/geopolitics/: russie.md
docs/health/: cold_exposure.md  dopamine.md  heat_exposure.md  immune_system.md  microbiome.md  micronutrient.md  oxytocin.md  serotonin.md  sleep.md
docs/invest/: env_sup.md  enveloppes.md  index.md  supports.md
docs/javascript/: client.js  katex.js
docs/maths/: calculus.md  differential_topology.md  equivariance.md  fourier.md  geometric_deep_learning.md  geometry.md  heiseinberg_uncertainty_principle.md  metrics.md  restricted_boltzmann_machine.md  surprise.md  symmetry.md
docs/maths/probability/: approximate_inference.md  bayesian_inference.md  index.md  (+2 more)
docs/notes/: quiz.md  todo.md
docs/stylesheet/: admonition.css  extra.css
examples/: aiassistant.py
src/: Modelfile  database.py  flashcard.py  manage.py  update.py
src/djangoproject/: asgi.py  settings.py  urls.py  wsgi.py
src/hanazono/: __init__.py
src/hanazono_conf/: asgi.py  middleware.py  production.py  settings.py  urls.py  wsgi.py
src/leitner/: __init__.py  admin.py  apps.py  flashcard.py  forms.py  models.py  quiz.py  tests.py  utils.py  views.py
src/plugin/: button.py  custom_button.py  custom_server.py  get_quiz.py  pbar.py  quiz.py
src/utils/: logger.py
tests/leitner/: test_flashcard.py
(+109 files in other folders)
