[project]
name = "Hanazono"
version = "0.0.0"
description = "Personal digital garden"
authors = [{ name = "Magsen Chebini", email = "magsen.che@gmail.com" }]
dependencies = [
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.3.1",
    "pymdown-extensions>=10.3",
    "black>=23.9.1",
    "pytest>=7.4.2",
    "mkdocs-open-in-new-tab>=1.0.2",
    "django>=4.2.6",
    "colorlog>=6.7.0",
    "bs4>=0.0.1",
    "pytest-django>=4.5.2",
    "langchain>=0.0.331",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
update = "python src/update.py"
manage = "python src/manage.py"
flashcard = "python src/flashcard.py"

[tool.pdm.scripts._]
env_file = ".env"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "djangoproject.settings"

[project.entry-points."mkdocs.plugins"]
button = "plugin.button:ButtonPlugin"
quiz = "plugin.quiz:QuizPlugin"
pbar = "plugin.pbar:ProgressBarPlugin"
