[project]
name = "Hanazono"
dynamic = ["version"]
description = "Personal digital garden"
authors = [{ name = "Magsen Chebini", email = "magsen.che@gmail.com" }]
dependencies = [
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.3.1",
    "pymdown-extensions>=10.3",
    "black>=23.9.1",
    "mkdocs-open-in-new-tab>=1.0.2",
    "django>=4.2.6",
    "colorlog>=6.7.0",
    "bs4>=0.0.1",
    "psycopg>=3.1.17",
    "django-redis>=5.4.0",
    "gunicorn>=22.0.0",
    "whitenoise>=6.6.0",
    "psycopg2-binary>=2.9.9",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.dynamic]
version = { attr = "src.hanazono.__version__" }

[tool.pdm.scripts]
manage = "python src/manage.py"
init = { composite = [
    "manage makemigrations",
    "manage migrate",
    "manage createuser --no-input",
    "manage update db",
    "manage build",
    "manage collectstatic --no-input",
] }
test = "python src/manage.py test hanazono.flashcards"

[tool.pdm.scripts._]
env_file = ".env"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[project.entry-points."mkdocs.plugins"]
button = "hanazono.plugin.button:ButtonPlugin"
quiz = "hanazono.plugin.quiz:QuizPlugin"
pbar = "hanazono.plugin.pbar:ProgressBarPlugin"
